--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,15 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+  
+    <!-- Double down button -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
  
