--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <!-- Nav CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     
+    <!-- Header CSS-->
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -29,15 +31,21 @@
     />
   </head>
 
- 
-  
-
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
     </nav>
-
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
+  
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
   </body>
