--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       <span>tweeter</span>
     </nav>
     <header>
+
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -48,5 +49,17 @@
   
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
+    <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form>
+        <label for="tweet-text">What are you humming about?</label>
+        <textarea name="text" id="tweet-text"></textarea>
+        <div>
+          <button type="submit">Tweet</button>
+          <output name="counter" class="counter" for="tweet-text">140</output>
+        </div>
+      </form>
+    </section>
+    
   </body>
 </html>
