Implement character counter

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
   
+    <!-- Composer Char Counter -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
     <!-- Double down button -->
     <link
       rel="stylesheet"
@@ -41,8 +44,10 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span name="title">tweeter</span>
+      <span name="write-tweet"><strong>Write</strong> a new</span>
       <i class="fas fa-angle-double-down"></i>
+
     </nav>
     <header>
 
