--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span name="title">tweeter</span>
-      <span name="write-tweet"><strong>Write</strong> a new</span>
+      <span>tweeter</span>
+      <span id="write-tweet"><strong>Write</strong> a new tweet</id>
       <i class="fas fa-angle-double-down"></i>
 
     </nav>
