--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-  
+   
+    <!-- Timeago JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
     <!-- Composer Char Counter -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
@@ -41,6 +44,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet"> 
+
+   
 
   </head>
 
@@ -79,7 +84,7 @@
       </form>
     </section>
     
-    <section class="tweet-timeline" id="tweet-container">
+    <section class="tweet-timeline" id="tweets-container">
       <article class="tweet">
         <header class="tweet-header">
           <div class="user-image">    
