--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form action="/tweets" method="POST">
+      <form class="tweet-submit">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
         <div>
