Over all styling edits, implement responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -57,28 +57,28 @@
       <span id="write-tweet"><strong>Write</strong> a new tweet</span>
       <i class="fas fa-angle-double-down"></i>
     </div>
-
-    </nav>
+   </nav>
+   <div class="tweet-column">
     <header class="main-header">
-
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
       <div>
-          <p><strong>Rhoda</strong>Phillips Osei</p>
+          <p><strong>Rhoda</strong> Phillips Osei</p>
       </div>
   </header>
   
     <!-- Page-specific (main) content here -->
     <main class="container">
     <section class="new-tweet">
-      <h2>Compose Tweet</h2>
+      <p></p>
       <form class="tweet-submit">
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
+        <label for="tweet-text">Compose Tweet</label>
+        
+        <textarea name="text" id="tweet-text" placeholder= "What are you humming about?"></textarea>
         <div>
-          <button type="submit">Tweet</button>
+          <button type="submit" id="">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
@@ -106,6 +106,7 @@
       </article> 
     </section>
   </main>
+</div>
   </body>
 </html>
 
