--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
     </section>
     
     <section class="tweet-timeline" id="tweets-container">
-      <article class="tweet">
+      <!-- <article class="tweet">
         <header class="tweet-header">
           <div class="user-image">    
           <img src="https://i.imgur.com/73hZDYK.png"></img>
@@ -103,7 +103,7 @@
               <i class="fa-solid fa-heart heart"></i>
             </div>
         </footer>
-      </article> 
+      </article>  -->
     </section>
   </main>
 </div>
