change profile img

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
       </div>
       <br>
       <div>
-          <p><strong>Rhoda Phillips Osei</strong></p>
+          <p><strong>Rhoda Phillips Osei 🔥 </strong></p>
       </div>
   </header>
   
